# midas

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md  dist-workspace.toml  midas.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs  manifest.rs  proc.rs  registry.rs
cli/src/checks/: mod.rs
cli/src/cmd/: add.rs  adopt.rs  check.rs  dev.rs  deviate.rs  doctor.rs  drift.rs  explain.rs  flow.rs  migrate.rs  mod.rs  new.rs  sync.rs  templates.rs  touch.rs
cli/src/core/: config.rs  confirm.rs  exit.rs  global.rs  log.rs  mod.rs  output.rs  prompt.rs  style.rs
cli/src/flow/: config.rs  env.rs  gh.rs  git.rs  migrate.rs  mod.rs  pscale.rs  release.rs  state.rs
cli/tests/: cli.rs
plans/: 0.5.0-standards-overhaul.md
registry/: conventions.json
registry/history/: 0.1.0.json  0.2.0.json  0.3.0.json  0.4.0.json  0.4.1.json  0.5.0.json
standards/: README.md  agents.md  process.md  review-agent-prompt.md  stack.md  why-rust.md
standards/backend/: authorization.md  conventions.md  feature-gating.md  observability.md  openapi.md
standards/cli/: conventions.md
standards/frontend/: conventions.md
standards/playbooks/: go-to-rust.md
templates/rust-service/: Cargo.toml  cargo-config.toml  openapi.json
templates/rust-service/db/migrations/: 001_init.sql
templates/rust-service/src/: db.rs  error.rs  http.rs  ids.rs  lib.rs  main.rs  openapi.rs  response.rs  routes.rs  tasks.rs
templates/rust-service/src/auth/: mod.rs
templates/rust-service/src/modules/: mod.rs
templates/rust-service/src/modules/items/: handler.rs  mod.rs  model.rs  service.rs
templates/svelte-app/: package.json  svelte.config.js  vite.config.ts
templates/svelte-app/src/: app.d.ts
templates/svelte-app/src/lib/: api.ts  utils.ts
templates/svelte-app/src/lib/components/ui/: Button.svelte
templates/svelte-app/src/lib/state/: app.svelte.ts  auth.svelte.ts
templates/svelte-app/src/lib/types/: api.generated.ts
templates/svelte-app/src/routes/: +layout.ts  +page.svelte
templates/svelte-app/src/routes/(public)/: +layout.ts  +page.svelte
templates/svelte-app/src/routes/app/: +layout.ts  +page.svelte
