[workspace]
resolver = "2"
members = ["cli"]

[workspace.package]
edition = "2021"
rust-version = "1.95"
license = "UNLICENSED"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
ignore = "0.4"
globset = "0.4"
regex = "1"

# dev / test
assert_cmd = "2"
predicates = "3"
trycmd = "0.15"
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
