[workspace]
resolver = "2"
members = ["cli"]
# Template skeletons are standalone projects (each its own workspace), embedded into the binary via
# include_str! — never built as part of the midas workspace.
exclude = ["templates"]

[workspace.package]
edition = "2021"
rust-version = "1.95"
license = "UNLICENSED"
repository = "https://github.com/midianio/midas"
homepage = "https://github.com/midianio/midas"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
ignore = "0.4"
globset = "0.4"
regex = "1"
ctrlc = "3"
libc = "0.2"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading",
] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "net", "time"] }
sqlx = { version = "0.8", default-features = false, features = [
    "mysql", "runtime-tokio", "tls-rustls",
] }

# dev / test
assert_cmd = "2"
predicates = "3"
trycmd = "0.15"
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
opt-level = "z"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
