[package]
name = "midas"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "The midian engineering standard — CLI (scaffold, check, flow, sync)."

[[bin]]
name = "midas"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
ctrlc = { workspace = true }
libc = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
trycmd = { workspace = true }
tempfile = { workspace = true }
