[package]
name = "{{PKG}}"
version = "0.1.0"
edition = "2021"
description = "A midian service (axum), scaffolded by `midas touch project`."

[workspace]

[lib]
name = "{{CRATE}}"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

# Fast edit-run loop for `midas dev` (which watch-restarts `cargo run` on change): skip full debug
# info for this crate (line tables are enough for backtraces) and lightly optimize dependencies once
# — they rarely recompile, and an -O1 tokio/axum makes the dev server feel real.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
# BE-0012: logs via tracing, never print macros.
print_stdout = "deny"
print_stderr = "deny"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
# Outbound HTTP seam (BE-0010): one pooled reqwest client, rustls (no OpenSSL → clean musl build).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# `macros` gives the `FromRow` derive (used by `midas touch module`) + the `query!` macros; it needs no
# database to build. Modules use the runtime-checked `query_as::<_, T>("…")` form, so the service
# compiles with no DB. Switch to compile-checked `query_as!` + a committed `.sqlx` cache later (BE-0018).
sqlx = { version = "0.8", default-features = false, features = [
    "mysql", "runtime-tokio", "tls-rustls", "chrono", "macros",
] }
# OpenAPI contract generation (BE-0014): the spec is built from `#[utoipa::path]` + `ToSchema`.
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
